--- a/templates/profile.html
+++ b/templates/profile.html
@@ -69,45 +69,45 @@
         <div class="row">
             <div class="col l3 m12 s12 title left-align"><span>CONTEXT</span></div>
             <section class="col-lg-9 col-md-12 col-sm-12 desc left-align emotions">
-                <p>
-                    <span class="col-lg-9 col-md-9 col-sm-9">Motivation</span>
-                    <a class="col-lg-3 col-md-3 col-sm-3"
+                <p style="display: flex">
+                    <span class="col-lg-9 col-md-9 col-sm-9" style="flex: 1">Motivation</span>
+                    <a class="col-lg-3 col-md-3 col-sm-3" style="flex: 1"
                        href="/playlists/motivation?token={{data.token}}&user_id={{data.user_id}}" style="align:right;">
                         <button class="btn-spotify btn-pink" onclick="">Open</button>
                     </a>
                 </p>
                 <br/>
                 <br/>
-                <p>
-                    <span class="col-lg-9 col-md-9 col-sm-9">Study</span>
-                    <a class="col-lg-3 col-md-3 col-sm-3"
+                <p style="display: flex">
+                    <span class="col-lg-9 col-md-9 col-sm-9" style="flex: 1">Study</span>
+                    <a class="col-lg-3 col-md-3 col-sm-3" style="flex: 1"
                        href="/playlists/study?token={{data.token}}&user_id={{data.user_id}}" style="align:right;">
                         <button class="btn-spotify btn-pink" onclick="">Open</button>
                     </a>
                 </p>
                 <br/>
                 <br/>
-                <p>
-                    <span class="col-lg-9 col-md-9 col-sm-9">Workout</span>
-                    <a class="col-lg-3 col-md-3 col-sm-3"
+                <p style="display: flex">
+                    <span class="col-lg-9 col-md-9 col-sm-9" style="flex: 1">Workout</span>
+                    <a class="col-lg-3 col-md-3 col-sm-3" style="flex: 1"
                        href="/playlists/workout?token={{data.token}}&user_id={{data.user_id}}" style="align:right;">
                         <button class="btn-spotify btn-pink" onclick="">Open</button>
                     </a>
                 </p>
                 <br/>
                 <br/>
-                <p>
-                    <span class="col-lg-9 col-md-9 col-sm-9">Gaming</span>
-                    <a class="col-lg-3 col-md-3 col-sm-3"
+                <p style="display: flex">
+                    <span class="col-lg-9 col-md-9 col-sm-9" style="flex: 1">Gaming</span>
+                    <a class="col-lg-3 col-md-3 col-sm-3" style="flex: 1"
                        href="/playlists/gaming?token={{data.token}}&user_id={{data.user_id}}" style="align:right;">
                         <button class="btn-spotify btn-pink" onclick="">Open</button>
                     </a>
                 </p>
                 <br/>
                 <br/>
-                <p>
-                    <span class="col-lg-9 col-md-9 col-sm-9">Sleep</span>
-                    <a class="col-lg-3 col-md-3 col-sm-3"
+                <p style="display: flex">
+                    <span class="col-lg-9 col-md-9 col-sm-9" style="flex: 1">Sleep</span>
+                    <a class="col-lg-3 col-md-3 col-sm-3" style="flex: 1"
                        href="/playlists/sleep?token={{data.token}}&user_id={{data.user_id}}" style="align:right;">
                         <button class="btn-spotify btn-pink" onclick="">Open</button>
                     </a>
