--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -105,7 +105,8 @@
 
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal" onclick="submitRate('{{context}}')">
+                        <button type="button" class="btn btn-default" data-dismiss="modal"
+                                onclick="submitRate('{{context}}')">
                             Submit
                         </button>
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
