Fix repeat play of first song

--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -204,10 +204,8 @@
             const url = `https://api.spotify.com/v1/me/player/play?device_id=${device_id}`
             var tracks = []
             var found = false
-            console.log("OG ID: " + trackID)
             for (let i=0; i<document.tracks.length; i++) {
                 trck = document.tracks[i]
-                console.log(trck)
                 if (trck.id == trackID) {
                     found = true
                     tracks.push(trck)
@@ -216,6 +214,7 @@
                     tracks.push(trck)
                 }
             }
+            tracks.shift()
             console.log(tracks)
             const uris = tracks?.map(track => track.uri) ?? [];
             const payload = {
@@ -231,7 +230,7 @@
             }).then(res => {
                 console.log("Playback started!");
                 document.player.togglePlay();
-                document.player.togglePlay();
+                // document.player.togglePlay();
                 // play-pause-button
                 document.getElementById('play-pause-button').innerText = 'PAUSE'
             })
