--- a/templates/profile.html
+++ b/templates/profile.html
@@ -77,7 +77,6 @@
                     </a>
                 </p>
                 <br/>
-                <br/>
                 <p style="display: flex">
                     <span class="col-lg-9 col-md-9 col-sm-9" style="flex: 1">Study</span>
                     <a class="col-lg-3 col-md-3 col-sm-3" style="flex: 1"
@@ -85,7 +84,6 @@
                         <button class="btn-spotify btn-pink" onclick="">Open</button>
                     </a>
                 </p>
-                <br/>
                 <br/>
                 <p style="display: flex">
                     <span class="col-lg-9 col-md-9 col-sm-9" style="flex: 1">Workout</span>
@@ -95,7 +93,6 @@
                     </a>
                 </p>
                 <br/>
-                <br/>
                 <p style="display: flex">
                     <span class="col-lg-9 col-md-9 col-sm-9" style="flex: 1">Gaming</span>
                     <a class="col-lg-3 col-md-3 col-sm-3" style="flex: 1"
@@ -104,7 +101,6 @@
                     </a>
                 </p>
                 <br/>
-                <br/>
                 <p style="display: flex">
                     <span class="col-lg-9 col-md-9 col-sm-9" style="flex: 1">Sleep</span>
                     <a class="col-lg-3 col-md-3 col-sm-3" style="flex: 1"
@@ -112,7 +108,7 @@
                         <button class="btn-spotify btn-pink" onclick="">Open</button>
                     </a>
                 </p>
-
+            </section>
         </div>
 
         <div class="row" style="margin-top: 30px;">
